@@ -637,6 +637,8 @@
 #define MENU_MOVIEOPTIONS               40322
 #define ID_GAME_UNDOSAVESTATE           40323
 #define FCEUX_CONTEXT_UNDOSAVESTATE     40324
+#define ID_GAME_UNDOSAVESTATE40325      40325
+#define ID_GAME_UNDOSAVESTATE40326      40326
 #define IDC_DEBUGGER_ICONTRAY           55535
 #define MW_ValueLabel2                  65423
 #define MW_ValueLabel1                  65426
@@ -646,7 +648,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        125
-#define _APS_NEXT_COMMAND_VALUE         40325
+#define _APS_NEXT_COMMAND_VALUE         40327
 #define _APS_NEXT_CONTROL_VALUE         1199
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
